[package]
name = "vlock"
version = "0.2.2"
edition = "2021"

authors = ["antonta <work@antonta.net>"]
description = "A fast and scalable multi-version shared state lock with wait-free read access."
license = "MIT OR Apache-2.0"
repository = "https://git.sr.ht/~antonta/vlock"
keywords = ["concurrency", "lock", "rwlock", "thread", "wait-free"]
categories = ["concurrency", "memory-management"]

[dependencies]
